<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_add">New</string>
    <string name="action_add_transaction">Add transaction</string>
    <string name="action_clear_list">Clean up</string>
    <string name="action_filter">Filter</string>
    <string name="action_reload">Reload</string>
    <string name="action_remove_group_photo">Remove group photo</string>
    <string name="action_select_month">Select month</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_in_gallery">Show in gallery</string>
    <string name="action_take_new_photo">Take a new photo</string>
    <string name="amount">Amount</string>
    <string name="amount_optional">Amount (optional)</string>
    <string name="optional">optional</string>
    <string name="app_name">Flatman</string>
    <string name="assigned_to">Assigned to %1$s</string>
    <string name="button_add_done">Add</string>
    <string name="button_add_more">Next</string>
    <string name="choose_create_button">Create new flat</string>
    <string name="choose_create_join_title">Join or create group</string>
    <string name="choose_create_join_question">Has any of your flat mates created the flat, or do you want to create a new group?</string>
    <string name="choose_join_button">Join existing flat</string>
    <string name="choose_login_button">Log into existing account</string>
    <string name="choose_login_register_title">Login or register</string>
    <string name="choose_login_register_question">If you have already created a Flatman account on another device, you can log into that directly. Otherwise, register to create a new account.</string>
    <string name="choose_register_button">Register now</string>
    <string name="create_button">Create</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="description_optional">Description (optional)</string>
    <string name="displayname_hint">First Last (optional)</string>
    <string name="done">Done</string>
    <string name="email_hint">Email</string>
    <string name="error_required">This field is required</string>
    <string name="group_name_hint">Flat title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="item">Item</string>
    <string name="login_button">Login</string>
    <string name="members">Members</string>
    <string name="money">Money</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="shopping">Shopping</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_click_here">Click here to go to the task view</string>
    <string name="tasks_done">Your free day – today!</string>
    <string name="tasks_done_message">You have completed all your tasks for today. Enjoy your free time!</string>
    <string name="tasks_pending">You have %1$d tasks pending</string>
    <string name="title_activity_welcome_wizard">Welcome to Flatman</string>
    <string name="title_add_item">Add item</string>
    <string name="title_create">Create a flat</string>
    <string name="title_join">Join a flat</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="todo">Placeholder</string>
    <string name="username_hint">Username</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="welcome">Your Flat</string>
    <string name="save">Save</string>
    <string name="status_home">At home</string>
    <string name="status_away">Out and about</string>
    <string name="settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_privacy">Privacy</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_data_sync">Data &amp; Sync</string>
    <string name="pref_server_title">API Server</string>
    <string name="pref_server_default">http://opatut.de:5000/</string>
    <string name="pref_show_home_title">Show whether I\'m home</string>
    <string name="title_activity_member_details">MemberDetailsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_shopping_item">ShoppingItemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_back">Back</string>
    <string name="select_category">Select category</string>

</resources>